global using Microsoft.AspNetCore.Mvc;
global using System.Net;
global using Grpc.Core;
global using Grpc.Core.Interceptors;
global using Educonnect.Student.Mobile.API.Infrastructure;
global using Educonnect.Student.Mobile.API.Services.Common;
global using Educonnect.Student.Mobile.API.Services.Course;
global using static CommonGrpcService.Common;
global using CommonGrpcService;
global using static CourseGrpcService.Course;
global using static CommonGrpcService.FormBuf;
global using static InstituteGrpcService.Institute;
global using Educonnect.Student.Mobile.API.Services.Common.FormServices;
global using Educonnect.Core.Sessions;

